# blueprintsolv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  blueprint.stl  build.rs
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
benches/: pipeline_bench.rs
specs/001-blueprint-to-3d/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-blueprint-to-3d/checklists/: requirements.md
specs/001-blueprint-to-3d/contracts/: cli.md  export-format.md  session-format.md
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs  ui.rs
src/blueprint/: element.rs  floor_plan.rs  image.rs  mod.rs  scale.rs
src/correction/: history.rs
src/detection/: classifier.rs  line_tracer.rs  merger.rs  mod.rs  preprocessor.rs
src/detection/ml/: inference.rs  model_manager.rs
src/detection/rules/: patterns.rs
src/export/: obj.rs  stl.rs
src/model3d/: generator.rs
src/ocr/: extractor.rs  parser.rs
src/session/: serialization.rs
test_fixtures/: labeled_plan.expected.json  simple_rectangle.expected.json
tests/integration/: main.rs  test_clarification.rs  test_detection.rs  test_detection_fallback.rs  test_export_obj.rs  test_export_stl.rs  test_interior_exterior.rs  test_ocr.rs  test_scaling.rs  test_session.rs  test_size_gate.rs
